# LiveShaders

./: CMakeLists.txt  README.md  build.sh  rainbow.glsl
src/: live_shaders.cpp  live_shaders.hpp  main.cpp  shader.cpp  shader.hpp  timer.cpp  timer.hpp
